# rust-watcher

./: .gitignore  Cargo.toml  FILESYSTEM_CACHE_DESIGN.md  OOM_RESOLUTION_SUCCESS.md  README.md  STORAGE_REFACTORING_PLAN.md  TODO.md  TODO_FILESYSTEM_CACHE.md  rustfmt.toml  test-safe.ps1  test_move_detection.ps1
.cargo/: config.toml
.github/: copilot-instructions.md
benches/: database_baseline.rs  watcher_baseline.rs
benchmarks/: fs_cache_bench_log.md
docs/: FILESYSTEM_CACHE_DESIGN.md  SCALABLE_STATS_DESIGN.md  TODO_FILESYSTEM_CACHE.md
examples/: advanced_monitor.rs  database_demo.rs
scripts/: README.md  install-hooks.ps1
scripts/hooks/: pre-commit  pre-commit.ps1
src/: error.rs  events.rs  filesystem_poc.rs  lib.rs  main.rs  move_detector.rs  retry.rs  test_infrastructure.rs  watcher.rs
src/database/: adapter.rs  config.rs  error.rs  mod.rs  path_utils.rs  storage.rs  types.rs
src/database/adapter/: README.md  background.rs  core.rs  maintenance.rs  mod.rs
src/database/background_tasks/: README.md  README_migration.md  implementation.rs  manager.rs  mod.rs
src/database/storage/: core.rs  event_retention.rs  event_storage.rs  filesystem_cache.rs  indexing.rs  maintenance.rs  metadata_storage.rs  mod.rs  multi_watch.rs  tables.rs  transactions.rs
src/database/storage/filesystem_cache/: hierarchy.rs  implementation.rs  indexing.rs  mod.rs  shared.rs  stats.rs  synchronizer.rs  tests.rs  trait_def.rs  utils.rs  watch_mapping.rs
src/database/storage/multi_watch/: implementation.rs  mod.rs  optimization.rs  types.rs
src/move_detection/: config.rs  detector.rs  error.rs  events.rs  heuristics.rs  matching.rs  metadata.rs  mod.rs  monitoring.rs  test_helpers.rs
test_playground/: setup_fs_manual.ps1
testing/: README.md
testing/benchmarks/: performance.rs
testing/docs/: TESTING_GUIDE.md
testing/unit/: basic_tests.rs  config_tests.rs  debug_tests.rs  error_handling_tests.rs  mod.rs  move_detector_tests.rs  real_world_move_tests.rs  stress_tests.rs  windows_integration_tests.rs  windows_specific_tests.rs
tests/: database_concurrency.rs  database_performance.rs  infra_database_concurrency.rs  integration_basic.rs  integration_cleanup_redundant_nodes.rs  integration_comprehensive.rs  integration_database.rs  integration_error_handling.rs  integration_event_retention.rs  integration_filesystem_cache.rs  integration_move_detection.rs  integration_multi_watch.rs  integration_multi_watch_concurrency.rs  integration_multi_watch_stress.rs  integration_shared_cache_optimization.rs  integration_time_index.rs  multi_watch_overlap.rs  multi_watch_shared_node.rs  path_normalization.rs  stress_cache_concurrency.rs
tests/common/: cleanup.rs  db_integration.rs  mod.rs
